force-app/main/default/objects/leaseworks__Asset_Review__c/leaseworks__Asset_Review__c.object-meta.xml
<CustomObject>
    <description>Part of Transition Project. This is to keep all Asset Reviews with findings, review status and collaboration
In progress: Roman</description>
    <label>Z_unused_2012 Asset Review</label>
    <nameField>
        <label>Z_unused_2012 Asset Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_unused_2012 Asset Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>