force-app/main/default/objects/leaseworks__Asset_Review__c/fields/leaseworks__Closed_Items__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Closed_Items__c</fullName>
    <label>Closed Items</label>
    <summaryFilterItems>
        <field>leaseworks__Asset_Review_Items__c.leaseworks__Review_Item_Status__c</field>
        <operation>equals</operation>
        <value>CLOSED</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Asset_Review_Items__c.leaseworks__Asset_Review__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>