force-app/main/default/objects/leaseworks__Asset_Review__c/fields/leaseworks__Review_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Review_Type__c</fullName>
    <description>Type of the current Review - periodical inspection or transition review. Used for sorting purposes</description>
    <inlineHelpText>Type of the current Review - periodical inspection or transition review. Used for sorting purposes</inlineHelpText>
    <label>Review Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Transition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>