force-app/main/default/objects/leaseworks__Asset_Review__c/fields/leaseworks__Total_Items__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Items__c</fullName>
    <label>Total Items</label>
    <summaryForeignKey>leaseworks__Asset_Review_Items__c.leaseworks__Asset_Review__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>