force-app/main/default/objects/leaseworks__Asset_Review__c/recordTypes/leaseworks__Review_Item.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Review_Item</fullName>
    <active>true</active>
    <label>Review Item</label>
</RecordType>